<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">




       <item
           android:id="@+id/dash_board"
           android:title="@string/dash_board"
           android:icon="@drawable/dashboard"

           />

       <item
           android:id="@+id/add_task"
           android:icon="@drawable/add"
           app:showAsAction="always"
           android:title="@string/add_task"/>
    <item
        android:id="@+id/view_user"
        android:icon="@drawable/view"
        app:showAsAction="always"
        android:title="@string/users"/>


    <item

        android:id="@+id/nav_settings"
        android:icon="@drawable/settings"
        android:title="@string/settings" />

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/logout"
        android:title="@string/logout" />
    <item
        android:id="@+id/exit"
        android:icon="@drawable/exit1"
        android:title="@string/exit"/>



</menu>